--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/assets/base.css">
-    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="./assets/base.css">
+    <link rel="stylesheet" href="./assets/main.css">
 </head>
 <body>
     <section class="mma-promo">
@@ -34,6 +34,6 @@
         </div>
     </section>
 
-    <script src="/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
