--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </section>
 
+    <script src="https://st.max.ru/js/max-web-app.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
