feat: добавляет обработчик на главную кнопку

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="mma-promo-button">
-                <button>Действие</button>
+                <button id="main-button">Действие</button>
             </div>
         </div>
     </section>
