--- a/index.html
+++ b/index.html
@@ -34,6 +34,63 @@
         </div>
     </section>
 
+    <section class="mma-feature">
+        <div class="container mma-feature-wrapper">
+            <div class="mma-feature-card">
+                <div class="mma-feature-card__title">
+                    <h3><span>Шаг А:</span> Осознать что-то</h3>
+                </div>
+
+                <div class="mma-feature-card__description">
+                    <p>
+                        Для начала нужно осознать и то и
+                        это и впринципе всё что понадобиться
+                        для дальнейших шагов.
+                    </p>
+                </div>
+
+                <button id="feature-a" class="mma-feature-card__button">
+                    Выполнить шаг А
+                </button>
+            </div>
+
+            <div class="mma-feature-card">
+                <div class="mma-feature-card__title">
+                    <h3><span>Шаг Б:</span> Сделать что-то</h3>
+                </div>
+
+                <div class="mma-feature-card__description">
+                    <p>
+                        После того, как вы что-то осознали
+                        настало время действовать! Сделайте
+                        что-то и это приведёт вас
+                        к следующему шагу.
+                    </p>
+                </div>
+
+                <button id="feature-b" class="mma-feature-card__button">
+                    Выполнить шаг Б
+                </button>
+            </div>
+
+            <div class="mma-feature-card">
+                <div class="mma-feature-card__title">
+                    <h3><span>Шаг В:</span> Увидеть что-то</h3>
+                </div>
+
+                <div class="mma-feature-card__description">
+                    <p>
+                        Как только вы сделали что-то настало время наблюдать за этим. Это ваш результат - поздравляю!
+                    </p>
+                </div>
+
+                <button id="feature-c" class="mma-feature-card__button">
+                    Выполнить шаг В
+                </button>
+            </div>
+        </div>
+    </section>
+
     <script src="https://st.max.ru/js/max-web-app.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
