--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="container mma-promo-wrapper">
             <div class="mma-promo-title">
                 <h1>
-                    Мини-приложение в мессенджере MAX
+                    Мини-приложение в чат-боте мессенджера MAX!
                 </h1>
             </div>
 
             <div class="mma-promo-description">
                 <p>
-                    Это ну очень крутая функциональность!
-                    Все эти ваши телеграммы, инстаграмы и прочие и рядом не стояли
-                    с нашим отечественным сервисом. Мы вам всем покажем кто тут BotFather!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Error, eos saepe? Laborum esse ullam, sunt id totam nisi.
+                    Fugit, aliquid.
                 </p>
             </div>
 
